dApp: Fixing broken info overlays on mobile

--- a/raiden-dapp/src/scss/dimensions.scss
+++ b/raiden-dapp/src/scss/dimensions.scss
@@ -1,3 +1,4 @@
 $first-child-padding: 80px;
 $list-header-padding-top: 30px;
 $dialog-button-height: 35px;
+$ios-safe-area: 44px;
